update: Customer Card and InternetPlanService