@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,7 +42,7 @@ public class InternetPlanService {
 
         return activePlans.stream()
                 .map(plan -> new InternetPlanSmallDTO(plan.id(), plan.name()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<InternetPlan> getInternetPlan(String id, AppUser appUser) {
